<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
     android:orientation="vertical" 
       android:background="#DDE787">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"      
        android:src="@drawable/periyar"
          android:layout_marginBottom="20dp"   />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/periyar" 
        android:layout_marginTop="20dp"        
          android:id="@+id/periyar_content"
      />


 <Button
        android:id="@+id/periyar_back"   
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/periyar_content"
        android:text="@string/back"        
        android:onClick="periyar_back"/>

    <Button
        android:id="@+id/periyar_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/periyar_content"
        android:text="@string/next"        
        android:onClick="periyar_next"
        />

</RelativeLayout>